syntax = "proto3";

option go_package = "github.com/Montheankul-K/game-microservices";

message FindItemInIdsReq {
  repeated int32 ids = 1;
}

message FindItemInIdsRes {
  repeated Item items = 1;
}

message Item {
  string id = 1;
  string title = 2;
  double price = 3;
  int32 damage = 4;
  string imageUrl = 5;
}

service ItemGrpcService {
  rpc FindItemInIds(FindItemInIdsReq) returns (FindItemInIdsRes);
}